# dotqtile

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  TODO.md  pyproject.toml  taskfile.yml
dotqtile/: __init__.py  __main__.py  version.py
taskfiles/: taskfile.neovim.yml  taskfile.python.yml  taskfile.sdkman.yml  taskfile.setup.yml  taskfile.submodule.neovim.yml  taskfile.terminal.yml  taskfile.thunar.yml
taskfiles/scripts/: 00-minimal-setup.sh  01-desktop.sh  01-pacman-desktop.sh  02-terminal.sh  10-hardware.sh  20-python.sh  21-pipx.sh  22-development.sh  25-productivity.sh  30-games.sh  50-qtile.sh  50-xfce.sh
terminal/: .bashrc
terminal/.config/fish/: config.fish
terminal/.config/fish/conf.d/: alias-linux.fish  alias.fish
terminal/.config/fish/functions/: y.fish  zpath.fish
terminal/.config/ghostty/: config
terminal/.config/kitty/: kitty.conf
terminal/.config/shell/: alias-linux.sh  alias.sh  functions-yazi.sh
terminal/.config/tint16/: main.py
terminal/.config/tint16/palettes/: alacritty.toml  fuzzel-palette.ini  ghostty  hyprland-colors.conf  kitty.conf  waybar.css  wezterm.toml  xresources-colors
terminal/.config/yazi/: yazi.toml
tests/: version_test.py
thunar/.config/Thunar/: uca.xml
thunar/.local/share/applications/: nvim.desktop
